src/App.scss
/* ... */
#light .single-product__markdown {
  //margin-top: 150px;
  background: #fff;
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;

  @media(max-width: 767px) {
    margin-bottom: 1rem;
  }
}

#dark .single-product__markdown {
  //margin-top: 150px;
  background: var(--dp06);
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;

  p {
    color: #e2e8f0;
  }

  h3 {
    color: #e2e8f0;
  }
  @media(max-width: 767px) {
    margin-bottom: 1rem;
  }

  ul {
    list-style-type: none;
  }
}

.single-product__markdown2 {
  //margin-top: 150px;
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 0;
}

#light .single-product__markdown2 {
  //margin-top: 150px;
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 0;
}

#dark .single-product__markdown2 {
  //margin-top: 150px;
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 0;

  p {
    color: #fff;
  }

  h2 {
    color: #e2e8f0;
  }

  h4 {
    color: #e2e8f0;
  }
}

.single-skill__markdown {
  background: #fff;
  padding: 2rem;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 4rem;
  padding-right: 4rem;

  p {
    //max-width: 650px;
    text-align: left;
    margin: 0 auto;
  }

  ul {
    text-align: left;
  }


  @media(max-width: 767px) {
    margin-bottom: 1rem;
    padding: 1.5rem;
    width: 675px;


  }

  @media(max-width: 700px) {
    margin-bottom: 1rem;
    padding: 1.3rem;
    width: 575px;
    width: 575px;
  }

  @media(max-width: 600px) {
    margin-bottom: 1rem;
    padding: 1.3rem;
    width: 575px;
    width: 475px;
  }

  @media(max-width: 500px) {
    margin-bottom: 1rem;
    padding: 1.3rem;
    width: 475px;
    width: 400px;
  }

  @media(max-width: 425px) {
    margin-bottom: 1rem;
    padding: 1.3rem;
    width: 400px;
    width: 370px;
  }


  @media(max-width: 375px) {
    margin-bottom: 1rem;
    padding: 1.1rem;
    width: 370px;
  }

}

#light .single-skill__markdown {
  background: #fff;
}

#dark .single-skill__markdown {
  background: var(--dp06);

  p {
    color: #e2e8f0;
  }

  h2 {
    color: #fff;
  }

  h3 {
    color: #fff;
  }
}


.single-skill__canvas {
  background-color: #fff;
}

#light .single-skill__canvas {
  background-color: #fff;
}

#dark .single-skill__canvas {
  background-color: var(--dp06);
}


.main-skills__items {
  //margin-top: 150px;
  background: #fff;
  padding: 2rem;
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 0.5rem;

  @media(max-width: 767px) {
    margin-bottom: 1rem;
  }
}

#light .main-skills__items {
  background: #fff;
}

#dark .main-skills__items {
  background-color: var(--dp02);
}


.portfolio-page__bg {
  background-color: var(--primary-color);
  padding-top: 40px;

  @media(max-width: 599px) {
    padding-top: 0;
  }
}

#light .portfolio-page__bg {
  background-color: var(--primary-color);
}

#dark .portfolio-page__bg {
  background-color: var(--dp00);
}

.skill-page__bg {
  background-color: var(--white-color);
  padding-top: 40px;


}

#light .skill-page__bg {
  background-color: var(--white-color);
}

#dark .skill-page__bg {
  background-color: var(--dp01);
}


code {
  transform: translateZ(0);
  min-width: 100%;
  float: left;
  & > span {
    display: block;
  }


  ::selection {
    background: #8b8b8b;
  }
}


.codeStyle {
  width: 100%;
  margin: 20px auto !important;
  font-size: 16px;
  padding: 1.5rem !important;

  @media(max-width: 976px) {
    font-size: 15px;
  }

  @media(max-width: 767px) {
    font-size: 14px;
  }

  @media(max-width: 600px) {
    font-size: 13px;
  }

  @media(max-width: 500px) {
    font-size: 12px;
  }
}


span.linenumber { display: none !important; }

.skill-name_overflow {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 80px;
}




.video__container {
  @media(max-width: 599px) {
    display: none;
  }
}

#work {
  @media(max-width: 599px) {
    padding-top: 40px;
  }
}

.app__work-filter {
  @media(max-width: 599px) {
    display: none !important;
  }
}

.app__work-portfolio {
  @media(max-width: 599px) {
    padding-top: 20px !important;
  }
}

